syntax = "proto3";

package videos;

service VideoService {
  rpc CreateVideo(CreateVideoRequest) returns (VideoResponse);
  rpc GetVideoById(GetVideoByIdRequest) returns (VideoResponse);
  rpc UpdateVideo(UpdateVideoRequest) returns (VideoResponse);
  rpc DeleteVideo(DeleteVideoRequest) returns (DeleteVideoResponse);
  rpc ListAllVideos(ListAllVideosRequest) returns (ListAllVideosResponse);
}

message Video {
  string id = 1;
  string title = 2;
  string description = 3;
  string genre = 4;
  int32 likes = 5;
  string created_at = 6;
  string updated_at = 7;
}

message CreateVideoRequest {
  string title = 1;
  string description = 2;
  string genre = 3;
}

message GetVideoByIdRequest {
  string id = 1;
}

message UpdateVideoRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  string genre = 4;
}

message DeleteVideoRequest {
  string id = 1;
}

message DeleteVideoResponse {
  string message = 1;
}

message ListAllVideosRequest {
  int32 page = 1;
  int32 limit = 2;
  string title = 3;
  string genre = 4;
}

message ListAllVideosResponse {
  repeated Video videos = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message VideoResponse {
  string id = 1;
  string title = 2;
  string description = 3;
  string genre = 4;
  int32 likes = 5;
  string created_at = 6;
  string updated_at = 7;
}
